Fixed Image Not Showing Issue

--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -28,7 +28,7 @@ const formatDate = (dateString: string) => {
       {
         post.data.image && (
           <Image
-            src={post.data.image}
+            src={post.data.image.src}
             alt={post.data.title}
             width={600}
             height={400}
